project(Graph CXX)
cmake_minimum_required(VERSION 3.1)

# include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
# conan_basic_setup()

include_directories("include")

# enable_testing()
# add_executable(all_tests test/main.cpp test/Adjacency_list.cpp test/Atomic_adjacency_list.cpp test/Dot_format.cpp test/Edge_list.cpp test/Stable_adjacency_list.cpp test/Stable_edge_list.cpp test/Stable_node_list.cpp)
# add_test(
# 	NAME all_tests
# 	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
# 	COMMAND example)